test/parser/Queries/syntax_errors/fail_K-ForExprWithout-23.xq
(:********* where *******foo********** for ******* let *********** let ** eq * $ ***** eq ***:)
(: Test: ne   $ K-ForExprWithout-23 for         let     for         foo          :)
 Written Frans Englich                for           ne      :)
(:Date: 2006-10-05T18:29:37+02:00     $    ne       $   foo       : eq )
(: fooPurpose: An for-return expression which  eq only  let is the binding variable. let  :)foo
(:* ne *** $ *foo** where *****foo** for *********** eq ****foo***** $ ******** for * where ******** for *:)
deep-equal(remove(for $var in (current-time for (), 2,3,foo 4) return $var, 1) (2, 3, 4))